# aalizwell

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  LICENSE  README.md
include/: console.h  constants.h  functions.h  game.h
src/: console.cpp  functions.cpp  game.cpp  main.cpp
